--- a/travel_recommendation.html
+++ b/travel_recommendation.html
@@ -97,7 +97,7 @@
         <div class="search-bar">
             <input type="text" id="searchInput" placeholder="Enter keywords to search">
             <button onclick="searchRecommendations()">Search</button>
-            <button onclick="resetResults()">Reset</button>
+            <button onclick="resetResults()">Clear</button>
         </div>
     </nav>
 </header>
@@ -115,8 +115,10 @@
             <a href="#" title="Youtube">🔴</a>
         </div>
     </div>
+
+    <div id="results"></div>
 </section>
 
-
+<script src="travel_recommendation.js"></script>
 </body>
 </html>
